import "KFCommonMessage.proto";

package KFMsg;

enum LogProtocol
{	
	S2S_LOG_REQ = 21001;				//∑¢ÀÕµΩ cluster log server¥Ú”°log
 }

///////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
///////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
///////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
// S2S_TRANSMIT_MESSAGE_REQ
message S2SLogReq
{
	required int32 log_level		= 1;
	required int32 log_category		= 2;
	required int32 zone_id			= 3;
	required string app_name		= 4;
	required string app_type		= 5;
	required int32 app_id			= 6;
	required string log_info		= 7;
}